Fix double scroll bars in vendor filter modal
git-svn-id: https://svn.penske.com/svn/ecomm/webprojects/suppliermgmt/suppliermgmt/branches/dev@65604 1dbbddac-570e-0410-aece-e783461d2649

--- a/WebContent/css/global/vendor-filter.css
+++ b/WebContent/css/global/vendor-filter.css
@@ -1,6 +1,10 @@
 .modal-body {
-  max-height: 500px;
+  max-height: 450px;
   overflow-y: auto;
+}
+
+.modal-footer {
+  margin-top: 15px;
 }
 
 .common-tree-container {
